crates/tree-sitter-clia/test/corpus/literals.txt
===
Atom
===

defmodule Test do
  def foo() do
    :baz
  end
end

---

(source_file
  (module_definition
    (alias)
    (module_block
      (function_definition
        (identifier)
        (parameter_list)
        (function_block
          (atom
            (identifier)))))))

===
Float decimal
===

defmodule Test do
  def foo() do
    03243.232
  end
end

---

(source_file
  (module_definition
    (alias)
    (module_block
      (function_definition
        (identifier)
        (parameter_list)
        (function_block
          (float))))))

===
Float scientific
===

defmodule Test do
  def foo() do
    3.232E+10
  end
end

---

(source_file
  (module_definition
    (alias)
    (module_block
      (function_definition
        (identifier)
        (parameter_list)
        (function_block
          (float))))))
